<resources>
    <string name="app_name">Santa\'s List</string>
    <string name="add_child_title">Add a Child</string>
    <string name="edit_child_title">Edit Child Entry</string>
    <string name="delete_child_title">Delete Child Entry</string>
    <string name="display_list">"Santa's Christmas List"</string>
    <string name="search_child">"Search for a Child"</string>
    <string name="delete_table_title">"Delete Santa's List"</string>
    <string name="display_table_title">"View Santa's List"</string>



</resources>
